# blue.whale

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  README.md  go.work  main.py  requirements.txt
cli/: commands.py
config/: settings.yaml
core/: bridge.py  executor.py  mutator.py  oast.py  parser.py  paths.py  reporter.py  state_machine.py  waf.py
data/: user_agents.txt
data/wordlists/deserial/: deserial.txt  java.txt  php.txt  python_node.txt
data/wordlists/idor/: basic.txt  headers_methods.txt  idor.txt  pollution.txt
data/wordlists/sqli/: blind_boolean.txt  blind_time.txt  bypass.txt  error.txt  oob.txt  polyglots.txt  sqli.txt  union.txt
data/wordlists/ssrf/: bypass.txt  cloud.txt  internal.txt  protocols.txt  ssrf.txt
data/wordlists/ssti/: java.txt  nodejs.txt  php.txt  python.txt  ruby.txt  ssti.txt
data/wordlists/xss/: attribute_injection.txt  (+6 more)
engine/: client.go  go.mod  go.sum  main.go  ratelimiter.go  statemachine.go
engine/templates/: smuggling.yaml  sqli.yaml  ssrf.yaml  xss.yaml
gui/: components.py  dashboard.py
sh/: bootstrap.sh  pipe.sh  schedule.sh  supervisor.sh
src/brain/: Cargo.toml
src/brain/src/: main.rs
src/browser/: controller.py
src/cli/: commands.py
src/core/: bridge.proto  bridge.py  executor.py  executor_new.py  mutator.py  oast.py  orchestrator.py  parser.py  paths.py  reporter.py
src/engine/: client.go  crawler.go  fingerprinter.go  go.mod  go.sum  main.go  ratelimiter.go  statemachine.go  templates.go
src/evidence/: manager.py
src/models/: base.py  ollama.py
src/rules/: engine.py
tests/: test_parser.py
(+7 files in other folders)
